# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: gendiff.yml
gendiff/: __init__.py
gendiff/modules/: build_diff_tree.py  formatter.py  generate_diff.py  parse.py  parse_args_cli.py
gendiff/modules/formatters/: _json.py  _plain.py  _stylish.py
gendiff/scripts/: _build_diff_tree.py  _parse.py  gendiff.py  generate_diff.py  parse.py
gendiff/scripts/formatters/: _plain.py  _stylish.py  formatter.py
tests/: conftest.py  test_gendiff.py  test_parse.py
tests/test_data/: file1.yaml  file1.yml
